--- a/course.html
+++ b/course.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap practice</title>
+    <title>Course - tamil</title>
 
     <link rel="stylesheet" href="./assets/Css/bootstrap.min.css" />
     <script
@@ -93,18 +93,24 @@
     <!-- end header -->
     <!-- Content -->
 
-    <div class="container my-5">
-      <h4>Learn programing in Tamil</h4>
-      <p class="lead">
-        Access the 4K content absolutely FREE on the cyberdude channel . Enroll
-        on the course and start your discussion today!
-      </p>
+    <div class="container my-5 gg">
+      <div class="float-start">
+        <h4>Learn programing in Tamil</h4>
+        <p>
+          Access the 4K content absolutely FREE on the cyberdude channel .
+          Enroll on the course and start your discussion today!
+        </p>
+      </div>
+      <a href="#" class="btn btn-danger btn-sm float-end mobile-block">
+        <i class="fa fa-play-circle mx-2"></i>Visit Channel</a
+      >
+      <div class="clearfix"></div>
     </div>
     <!-- Cards -->
     <div class="container my-5">
       <div class="row">
-        <div class="col">
-          <div class="card">
+        <div class="col-12 col-md-4">
+          <div class="card mb-4">
             <img
               src="https://cyberdudenetworks.com/assets/img/training/courses/learn-html-essentials-in-tamil.jpg"
               class="card-img-top"
@@ -119,14 +125,19 @@
                 Learn HTML 5 and build powerful interactive websites in minutes
                 . Enroll this course to learn everthing from scratch for free!
               </p>
+              <div class="d-grid">
+                <a href="#" class="btn btn-primary"
+                  ><i class="fa fa-external-link mx-2"></i> Enroll Now</a
+                >
+              </div>
             </div>
             <div class="card-footer">
               <small class="text-muted">Last Updated on: August, 2020</small>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card">
+        <div class="col-12 col-md-4">
+          <div class="card mb-4">
             <img
               src="https://cyberdudenetworks.com/assets/img/training/courses/learn-css3-in-tamil.jpg"
               class="card-img-top"
@@ -141,14 +152,19 @@
                 Learn CSS 3 and build powerful interactive websites in minutes .
                 Enroll this course to learn everthing from scratch for free!
               </p>
+              <div class="d-grid">
+                <a href="#" class="btn btn-primary"
+                  ><i class="fa fa-external-link mx-2"></i> Enroll Now</a
+                >
+              </div>
             </div>
             <div class="card-footer">
               <small class="text-muted">Last Updated on: August, 2020</small>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card">
+        <div class="col-12 col-md-4">
+          <div class="card mb-4">
             <img
               src="https://cyberdudenetworks.com/assets/img/training/courses/learn-javascript-in-tamil.jpg"
               alt="Javascript Tamil"
@@ -163,6 +179,11 @@
                 Learn JS and build powerful interactive websites in minutes .
                 Enroll this course to learn everthing from scratch for free!
               </p>
+              <div class="d-grid">
+                <a href="#" class="btn btn-primary"
+                  ><i class="fa fa-external-link mx-2"></i> Enroll Now</a
+                >
+              </div>
             </div>
             <div class="card-footer">
               <small class="text-muted">Last Updated on: August, 2020</small>
