till carousel completed

--- a/blog.html
+++ b/blog.html
@@ -108,22 +108,32 @@
     <!-- Blog Listing -->
     <div class="container mt-5">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <!-- List Group  -->
 
           <ul class="list-group">
-            <li class="list-group-item bg-primary text-white">Categories</li>
+            <li class="list-group-item bg-primary text-center text-white">
+              Categories
+            </li>
             <li
               class="list-group-item d-flex justify-content-between align-items-center"
             >
               Bootstrap
               <span class="badge bg-primary rounded-pill">5</span>
             </li>
-            <li class="list-group-item">Web Design</li>
-            <li class="list-group-item">PHP</li>
+            <li
+              class="list-group-item d-flex justify-content-between align-items-center"
+            >
+              Web Design<span class="badge bg-danger rounded-pill">5</span>
+            </li>
+            <li
+              class="list-group-item d-flex justify-content-between align-items-center"
+            >
+              PHP<span class="badge bg-success rounded-pill">5</span>
+            </li>
           </ul>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-9">
           <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
