--- a/index.html
+++ b/index.html
@@ -208,83 +208,27 @@
         </button>
 
         <button class="btn btn-outline-success">Total videos :120</button>
-        <!-- <a href="#" class="btn btn-outline-danger"
-          >Upcoming Videos: <span class="badge badge-secondary">14</span></a
-        > -->
-        <!-- <hr />
-        <h4>Web Designing Courses</h4>
-        <p>Learn this before jumping to backend Technologies</p>
-        <div
-          class="btn-group btn-group-sm"
-          role="group"
-          aria-label="basic frontend courses"
-        >
-          <button class="btn btn-danger">HTML5</button>
-          <button class="btn btn-info">CSS3</button>
-          <div class="btn-group" role="group">
-            <button
-              id="btnGroupDrop1"
-              type="button"
-              class="btn btn-primary dropdown-toggle"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              JavaScript
-            </button>
-            <ul
-              class="dropdown-menu bg-danger text-dark"
-              aria-labelledby="btnGroupDrop1"
-            >
-              <li><a class="dropdown-item" href="#">Basic </a></li>
-              <li><a class="dropdown-item" href="#">Intermediate</a></li>
-              <li><a class="dropdown-item" href="#">Advance</a></li>
-            </ul>
-          </div>
-
-          <button class="btn btn-warning">JavaScript</button> -->
-        <!-- </div>
-        <button type="button" class="btn btn-primary position-relative">
-          Inbox
-          <span
-            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-          >
-            99+
-            <span class="visually-hidden">unread messages</span>
-          </span>
-        </button>
-        <button type="button" class="btn btn-primary position-relative">
-          Profile
-          <span
-            class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle"
-          >
-            <span class="visually-hidden">New alerts</span>
-          </span>
-        </button>
-      </div>
-    </div>  -->
+        
     <!-- Cards -->
-    <div class="container mt-5 mb-5">
-      <div class="card" style="width: 18rem;">
-        <img src="https://cyberdudenetworks.com/assets/img/training/courses/learn-html-essentials-in-tamil.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="container mt-5">
+          <h4>Download links are below</h4>
+          <p>Choose the download link based on your region</p>
+          <p>
+            <a href="#collapseExample" class="btn btn-primary" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">Server #1</a>
+            <button class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Server #2</button>
+          </p>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+              https://google.com
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="  card" style="width:18rem;">
-        <img src="https://cyberdudenetworks.com/assets/img/training/courses/learn-javascript-in-tamil.jpg" alt="Javascript Tamil" class="card-img-top">
-      
-      <div class="card-body ">
-        <h5 class=" card-title">Learn JavaScript Tamil</h5>
-        <p class="card-text">Learn Javascript and build powerful interactive websites in minutes . Enroll this course to learn everthing from scratch for free!</p>
-        <a href="#" class="btn btn-primary"> Enroll Now</a>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last Updated on: August</small>
-      </div>
-      <!-- <a href="#" class="btn btn-primary"> Enroll Now</a> -->
-    </div>
+
+        <hr class="my-5">
+
+        <div>
+          <h4>Frequently Asked Questions</h4>
+        </div>
     <!-- Bootstrap Js -->
     <script src="./assets/Js/popper.min.js"></script>
     <script src="./assets/Js/bootstrap.min.js"></script>
